examples/errors/e0114.sdm
module example <https://example.com/api> is

  import [ dc skos xsd ]

  structure Foo is
    name -> Bar
  end

end
